--- a/app.css
+++ b/app.css
@@ -24,14 +24,26 @@ main{
   position: fixed;
   left: 10%;
   top: 20%;
-  width: 40%;
-  min-height: 60%;
+  width: 50%;
+  min-height: 80%;
   background-color: rgb(236, 195, 141);
+  overflow: auto;
 }
-main button {
-  position: sticky;
+#search {
+  position: fixed;
+  left: 10%;
+  top: 15%;
+} 
+#myListButton {
+  position: fixed;
+  left: 15%;
+  top: 15%;
 }
 #searchList{
+  position: absolute;
+  width: 90%;
+  left: 10%;
+
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -39,19 +51,21 @@ main button {
 }
 .movieInList {
   width: 90%;
-  height: 20%;
+  max-height: 150px;
   background-color: aqua;
   margin: 2%;
-  overflow: auto;
 }
 .movieInList img{
-  position: absolute;
+  /* position: absolute; */
   float: left;
-  height: fit-content;
-  width: 30%;
+  max-height: 150px;
+  max-width: 100%;
+ /*  height: 100%;
+  width: 30%; */
 }
 .movieInList p {
-  float: right;
+  margin-left: 20%;
+  font-size: large;
 }
 
 .myList {
@@ -59,3 +73,8 @@ main button {
   flex-direction: column;
 }
 
+
+
+/* button {
+  display: inline;
+} */
