--- a/app.css
+++ b/app.css
@@ -61,7 +61,7 @@ main{
   /* position: absolute; */
   float: left;
   max-height: 150px;
-  max-width: 100%;
+  max-width: 50%;
  /*  height: 100%;
   width: 30%; */
 }
@@ -82,7 +82,30 @@ main{
 }
 
 
+#movieInfo {
+  display: none;
+ 
+  position: fixed;
+  left: 65%;
+  top: 20%;
+  width: 30%;
+  max-height: 80%;
+  background-color: rgb(236, 195, 141);
+  overflow: auto;
 
+  flex-direction: column;
+  justify-content: flex-start;
+
+}
+
+.movieInfoElement {
+  width: 90%;
+  max-height: 400px;
+  margin: 2%;
+}
+img[class='movieInfoElement']{
+  max-width: 200px;
+}
 /* button {
   display: inline;
 } */
