--- a/app.css
+++ b/app.css
@@ -1,44 +1,68 @@
+@import url('https://fonts.googleapis.com/css2?family=Bitter:wght@300&family=Lobster&display=swap');
+
 html {
-  overflow: auto;
+  overflow: hidden;
+  background-image: url('/background.jpg');
+  background-size: cover;
 }
 body{
-  overflow: auto;
-}
+  font-family: 'Bitter', serif;
+  color: whitesmoke;
+} 
 header{
   position: absolute;
   top: 0;
-  left: 0;
   width: 100%;
   height: 10%;
-  background: #d30b0b;
+  font-family: 'Lobster', sans-serif;
+  color:rgba(245, 245, 245, 0.816);
 }
-header h1 {
-  position: absolute;
-  height: 50%;
+header span {
+  text-align: center;
+  position: fixed;
+  font-size: 350%;
+  top: -1%;
   width: 20%;
   left: 40%;
-  text-align: center;
-  color: white;
 }
+
 main{
   position: fixed;
   left: 10%;
-  top: 20%;
-  width: 50%;
-  min-height: 80%;
-  background-color: rgb(236, 195, 141);
-  overflow: auto;
-}
-#searchListButton {
-  position: fixed;
-  left: 10%;
   top: 15%;
+  width: 50%;
+  min-height: 85%;
+  background-color: rgba(19, 18, 18, 0.693);
+  overflow: auto;
+  border-radius: 10% 0% 0% 10%;
+  scroll-behavior: smooth;
+}
+
+#searchListButton,  #myListButton {
+  position: fixed;
+  color: whitesmoke;
+  background-color: rgba(0, 0, 0, 0.453) ;
+  width: 10%;
+  height: 5%;
+  top: 10%;
+  border-radius: 15% 15% 0% 0%;
+  font-weight: bold;
+  font-size:small;
+}
+#searchListButton { 
+  left: 15%;  
 } 
 #myListButton {
-  position: fixed;
-  left: 15%;
-  top: 15%;
+  left: 27%;
 }
+  #searchListButton:disabled, #myListButton:disabled{
+    background-color: rgba(0, 0, 0, 0.953);
+    box-shadow: 10px -5px 10px whitesmoke;
+  }
+  #searchListButton:hover, #myListButton:hover {
+    background-color: rgba(0, 0, 0, 0.94);
+    box-shadow: 10px -5px 10px whitesmoke;
+  }
 
 #searchList{
   position: absolute;
@@ -49,9 +73,32 @@ main{
   flex-direction: column;
   justify-content: flex-start;
   overflow: auto;
-  
 }
-
+#searchList:nth-child(2){
+  margin-top: 2%;
+}
+#searchMovie{
+  margin: 1%;
+  width: 50%;
+  margin-left: 25%;
+}
+  #searchMovie input {
+    font-family: 'Lobster';
+    font-size: large;
+  }
+  #searchMovie input[type='text'] {
+    height: 100%;
+    background:rgba(255, 255, 255, 0.734);;
+    border-radius: 5%;
+    font-weight:lighter;
+  }  
+  #searchMovie input[type='submit']{
+    height: 120%;
+    padding: 2%;
+    color: whitesmoke;
+    background: rgb(233, 180, 81);
+    border-radius: 15%;
+  }
 #myList{
   position: absolute;
   width: 90%;
@@ -66,19 +113,25 @@ main{
 .movieInSearchList, .movieInMyList {
   width: 90%;
   max-height: 150px;
-  background-color: aqua;
+  background: linear-gradient(to right, rgba(12, 12, 12, 0.686), 90%, rgba(247, 245, 245, 0.364));
+  background-color: rgba(12, 12, 12, 0.207);
   margin: 2%;
-}
-.movieInSearchList img, .movieInMyList img{
+  border-radius: 0% 10% 10% 0%;
+  } 
+  .movieInSearchList p:nth-child(2), .movieInMyList p:nth-child(2){
+    font-size: x-large;
+    font-family: 'Lobster', sans-serif;
+  }
+  .movieInSearchList img, .movieInMyList img{
   float: left;
   max-height: 150px;
   max-width: 50%;
   margin-right: 5%;
-}
-.movieInSearchList p, .movieInMyList p {
+  }
+  .movieInSearchList p, .movieInMyList p {
   /* margin-left: 20%; */
   font-size: large;
-}
+  }
 .movieInSearchList span {
   font-size: x-large;
   float: right;
@@ -103,28 +156,61 @@ main{
  
   position: fixed;
   left: 65%;
-  top: 20%;
+  top: 15%;
   width: 30%;
-  max-height: 80%;
-  background-color: rgb(236, 195, 141);
+  max-height: 85%;
+  background-color: rgba(19, 18, 18, 0.693);
   overflow: auto;
+  font-size: larger;
 
   flex-direction: column;
   justify-content: flex-start;
 
+  border-radius: 5%;
+}
+#movieInfo p:first-child{
+  font-size: x-large;
+  font-weight: bold;
 }
 
 .movieInfoElement {
   width: 90%;
   max-height: 400px;
   margin: 2%;
+  margin-left: 5%;
 }
 img[class='movieInfoElement']{
-  max-width: 200px;
+  max-width: 70%;
+  max-height: 70%;
 }
 button[class='movieInfoElement'] {
   width: 40%; 
   margin: 2% 20% 2% 30%;
+
+  padding: 1%;
+  color: whitesmoke;
+  background-color: rgba(0, 0, 0, 0.583) ;
+  border-radius: 15%;
+  font-weight: bold;
+  font-size: medium;
+}
+button[class='movieInfoElement']:active{
+  color: red;
+}
+
+.movieInMyList button{
+  float: right;
+  margin-right: 5%;
+
+  padding: 1%;
+  color: whitesmoke;
+  background-color: rgba(0, 0, 0, 0.583) ;
+  border-radius: 15%;
+  font-weight: bold;
+  font-size: medium;
+}
+.movieInMyList button:hover{
+  background-color: rgba(255, 0, 0, 0.809);
 }
 /* button {
   display: inline;
